# hbee-plain-lcd

./: .gitignore  Cargo.toml  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
src/: consts.rs  display.rs  macros.rs  main.rs  thingsup.rs  types.rs  ui.rs
ui/: globals.slint  main.slint  types.slint
